--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,74 +1,81 @@
 <app-navbar></app-navbar>
-<!-- Categories -->
-<div class="container-fluid my-lg-5">
-    <div class="row top-banner text-center">
-        <div class="col-lg-6 pt-5">
-            <a [routerLink]="['fixed-prices', service.category]" *ngFor="let service of services"
-                class="btn btn-light shadow-sm border rounded-pill me-3 mb-3 text-nowrap">
-                <h2 class="font-monospace m-0">
-                    {{service.category}}
+<!-- Main Content -->
+<main>
+    <!-- Hero Section -->
+    <section class="container-fluid my-lg-5">
+        <div class="row top-banner text-center">
+            <div class="col-lg-6 pt-5">
+                <nav aria-label="Service Categories">
+                    <a [routerLink]="['fixed-prices', service.category]" *ngFor="let service of services"
+                        class="btn btn-light shadow-sm border rounded-pill me-3 mb-3 text-nowrap">
+                        <h2 class="font-monospace m-0">
+                            {{service.category}}
+                        </h2>
+                    </a>
+                </nav>
+                <div><a routerLink="/quotes" class="text-dark font-monospace">View quoted services?</a></div>
+            </div>
+            <div class="col-lg-6">
+                <h1 class="text-custom alice-font mb-0 display-1 mt-5 pt-5">Redbud Way</h1>
+                <p class="lead text-muted fw-normal">
+                    <span class="fw-bold">Shop</span>, <span class="fw-bold">Book</span>, and <span class="fw-bold">Pay</span> for all your service needs.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="container-fluid py-lg-5">
+        <div class="row padding-y bg-light">
+            <div class="col-lg-6 text-center px-5">
+                <img src="assets/images/icon.png" class="icon-width" alt="Redbud Way Icon">
+                <p class="fw-light my-5 display-6">
+                    Redbud Way is service marketplace for buying and selling services. Freelancers, independent contractors,
+                    or companies in various industries can advertise their services and get hired by people who need their
+                    help.
+                </p>
+            </div>
+            <div class="col-lg-6 text-center">
+                <img src="assets/images/marketplace.svg" class="max-svg-width" alt="Marketplace Illustration">
+            </div>
+        </div>
+    </section>
+
+    <!-- Advertisement Section -->
+    <section class="container">
+        <fieldset class="ad-container mt-5">
+            <legend>advertisement</legend>
+            <ins class="adsbygoogle"
+                style="display:block; text-align:center;"
+                data-ad-client="ca-pub-5202373050833043"
+                data-ad-slot="5447912615"
+                data-ad-layout="in-article"
+                data-ad-format="fluid"
+                data-full-width-responsive="true">
+            </ins>
+        </fieldset> 
+    </section>
+
+    <!-- Features Section -->
+    <section class="container">
+        <div class="row padding-top text-center">
+            <div class="col-lg-4 mb-5">
+                <h2 class="font-monospace"><fa-icon class="text-custom"
+                        [icon]="['fas','check']"></fa-icon>&nbsp;Instant Booking</h2>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <h2 class="font-monospace">
+                    <fa-icon class="text-custom" [icon]="['fas','check']"></fa-icon>&nbsp;Trusted <a class="link-dark"
+                        href="https://stripe.com" rel="nofollow">Payments</a>&nbsp;<a class="link-dark"
+                        href="https://stripe.com" rel="nofollow"><img width="100" src="assets/images/stripe.svg" alt="Stripe Payment"></a>
                 </h2>
-            </a>
-            <div><a routerLink="/quotes" class="text-dark font-monospace">View quoted services?</a></div>
+            </div>
+            <div class="col-lg-4 mb-5">
+                <h2 class="font-monospace"><fa-icon class="text-custom" [icon]="['fas','check']"></fa-icon>&nbsp;Quote Approvals</h2>
+            </div>
         </div>
-        <div class="col-lg-6">
-            <h1 class="text-custom alice-font mb-0 display-1 mt-5 pt-5">Redbud Way</h1>
-            <p class="lead text-muted fw-normal">
-                <span class="fw-bold">Shop</span>, <span class="fw-bold">Book</span>, and <span class="fw-bold">Pay</span> for all your service needs.</p>
-        </div>
-    </div>
-</div>
+    </section>
+</main>
 
-<!-- Description -->
-<div class="container-fluid py-lg-5">
-    <div class="row padding-y bg-light">
-        <div class="col-lg-6 text-center px-5">
-            <img src="assets/images/icon.png" class="icon-width">
-            <p class="fw-light my-5 display-6">
-                Redbud Way is service marketplace for buying and selling services. Freelancers, independent contractors,
-                or companies in various industries can advertise their services and get hired by people who need their
-                help.
-            </p>
-        </div>
-        <div class="col-lg-6 text-center">
-            <img src="assets/images/marketplace.svg" class="max-svg-width">
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <fieldset class="ad-container mt-5">
-        <legend>advertisement</legend>
-        <ins class="adsbygoogle"
-            style="display:block; text-align:center;"
-            data-ad-client="ca-pub-5202373050833043"
-            data-ad-slot="5447912615"
-            data-ad-layout="in-article"
-            data-ad-format="fluid"
-            data-full-width-responsive="true">
-        </ins>
-    </fieldset> 
-</div>
-
-<!-- Highlights -->
-<div class="container">
-    <div class="row padding-top text-center">
-        <div class="col-lg-4 mb-5">
-            <h2 class="font-monospace"><fa-icon class="text-custom"
-                    [icon]="['fas','check']"></fa-icon>&nbsp;Instant Booking</h2>
-        </div>
-        <div class="col-lg-4 mb-5">
-            <h2 class="font-monospace">
-                <fa-icon class="text-custom" [icon]="['fas','check']"></fa-icon>&nbsp;Trusted <a class="link-dark"
-                    href="https://stripe.com" rel="nofollow">Payments</a>&nbsp;<a class="link-dark"
-                    href="https://stripe.com" rel="nofollow"><img width="100" src="assets/images/stripe.svg"></a>
-            </h2>
-        </div>
-        <div class="col-lg-4 mb-5">
-            <h2 class="font-monospace"><fa-icon class="text-custom" [icon]="['fas','check']"></fa-icon>&nbsp;Quote Approvals</h2>
-        </div>
-    </div>
-</div>
 <div class="container padding-bottom">
     <div class="row text-center">
         <div class="col-lg-6 mb-5">
