fix: minor ui changes

--- a/src/app/pages/how-it-works/how-it-works.component.html
+++ b/src/app/pages/how-it-works/how-it-works.component.html
@@ -240,8 +240,8 @@
             </ins>
         </fieldset> 
         <hr>
-        <h2 id="signup-heading" class="alice-font text-custom display-3 pb-5 text-center">Start Your Service Business Today</h2>
-        <p class="text-muted text-center mb-4">Join our service marketplace and start offering your professional services to customers in your area</p>
+        <h2 id="signup-heading" class="alice-font text-custom display-3 text-center">Sign Up Today</h2>
+        <p class="text-muted text-center mb-4 alice-font fw-normal lead">Join our service marketplace and start offering your professional services to customers in your area</p>
         <ngb-alert [dismissible]="false" [type]="'danger'" *ngIf="accountError">
             Error creating account
         </ngb-alert>
